<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.visa.vts.certificationapp.activity.TermsAndConditionActivity">

    <include
        android:id="@+id/tc_toolbar"
        layout="@layout/view_tool_bar" />

    <TextView
        android:id="@+id/txtViewTnCHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tc_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialogtc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtViewTnCDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTnCHeading"
        android:layout_centerHorizontal="true"
        android:gravity="start"
        android:paddingTop="10dp"
        android:text="@string/dialogtcdetail"
        android:textAlignment="viewStart"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_marginRight="@dimen/activity_margin_right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtViewTnCInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTnCDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_marginRight="@dimen/activity_margin_right"
        android:gravity="start"
        android:paddingTop="10dp"
        android:text="@string/dialog_text"
        android:textAlignment="viewStart"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnProvisioning"
        style="@style/button.primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTnCInfo"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_marginRight="@dimen/activity_margin_right"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/btn_provisioning" />

</RelativeLayout>
